--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,40 +1,41 @@
 .lead__subtitle {
-    max-width: 640px; 
-    min-height: 72px;  
+    max-width: 640px;
+    height: 72px;
     font-size: 30px;
     line-height: 36px;
     font-weight: 400;
-    padding: 0 0 64px;
-    margin: 0;
+    margin: 0 0 64px;
     text-align: center;
 }
 
 @media screen and (max-width: 1124px) {
     .lead__subtitle {
-        padding: 0 0 56px;
+        margin: 0 0 56px;
     }
   }
-  
+
 @media screen and (max-width: 860px) {
   .lead__subtitle {
-  /* max-width: 288px; 
+  /* max-width: 288px;
   min-height: 88px;  */
   font-size: 25px;
   line-height: 30px;
-  padding: 0 0 40px;
+  margin: 0 0 40px;
   }
 }
 
 @media screen and (max-width: 568px) {
     .lead__subtitle {
-    /* max-width: 288px; 
+    /* max-width: 288px;
     min-height: 88px;  */
+    width: 288px;
+    height: 40px;
     font-size: 16px;
     line-height: 20px;
-    padding: 0 0 40px;
+    margin: 0 0 40px;
     }
   }
 
- 
-  
+
+
 
